5.24.0
MISC
    - Tweak character talent frame

5.23.0
NEW
    - Skins:
        - LFG
        - Allied Races
        - Weekly Rewards
        - Chromie Time
    - Added option to change tooltip font size
    - Added option to show "SpellQueueWindow" on castbar

FIXES
    - Fix some cooldown issues for extra action buttons
    - Show correct buffs in vehicle UI
    - Some actionbar hotkey issues

5.22.1
FIXES
    - Fix cooldown lua error

5.22.0
NEW
    - Added option to set mainbar and multibar button spacing
    - Added System datainfo to minimap fps text
FIXES
    - Some tooltip issues


5.21.1
FIXES
    - Tooltip statusbar color

5.21.0
NEW
    - Added text option to tooltip healthbar

FIXES
    - Fix some tooltip issues
    - Aura tooltips are now updating correctly to show remaning time
    - Fix item upgrade skin


5.20.1
FIXES
    - 9.1.5 tooltip issue

5.20.0
NEW
    - Added raid pet grid
    - Added option to fade main actionbar

FIXES
    - Raid buff indicators should now show as expected
    - Fix charged combo points

5.19.2
FIXES
    - Minimap button issue

MISC
    - Update locals

5.19.1
FIXES
    - Ember court issue
    - Garrision minimap icon tweaks

5.19.0
NEW
    - Added 'Smart' Raid Markers: Use a defined key (via keybinds) to open the smart raid marker menu.
        This opens a circle with all raid markers directly under your cursor
    - Added a prio for scaling important and dispellable debuffs

MISC
    - Redo raid and party grid profiling

5.18.0
NEW
    - Added Encounter Journal, Soulbinds and Convenant Sanctum Skin
    - Added 'Friends' tooltip to character micro menu button
FIXES
    - Raid frame sort by role

5.17.2
FIXES
    - Missing raid buff pet battle overlapping
    - Raid frame sort by role

MISC
    - Added OmniCD support

5.17.1
FIXES
    - Tweak raid/party profiles and fix some bugs
    - You can now change raid/party profile settings while in a party/raid

MISC
    - Added option to show chat timestamps for all messages