@@ -2,6 +2,9 @@ local _, GW = ...
 local v = GW.vernotes
 
 v("5.24.0", [=[
+NEW
+    - Added option for alternative target/focus background texture
+
 MISC
     - Tweak character talent frame
 ]=])
