@@ -426,3 +426,4 @@ L["Ctrl & Shift Click: Toggle CPU Profiling"] = true
 L["Chromie Time Frame"] = true
 L["Allied Races"] = true
 L["Show spell queue window on castinbar"] = true
+L["Show alternative background texture"] = true
