@@ -180,6 +180,7 @@ GW_DEFAULT["target_CASTINGBAR_DATA"] = false
 GW_DEFAULT["target_AURAS_ON_TOP"] = false
 GW_DEFAULT["target_FLOATING_COMBAT_TEXT"] = true
 GW_DEFAULT["target_FRAME_INVERT"] = false
+GW_DEFAULT["target_FRAME_ALT_BACKGROUND"] = false
 
 GW_DEFAULT["focus_TARGET_ENABLED"] = true
 GW_DEFAULT["focus_DEBUFFS"] = true
@@ -193,6 +194,7 @@ GW_DEFAULT["focus_HEALTH_VALUE_ENABLED"] = false
 GW_DEFAULT["focus_HEALTH_VALUE_TYPE"] = false
 GW_DEFAULT["focus_CLASS_COLOR"] = true
 GW_DEFAULT["focus_FRAME_INVERT"] = false
+GW_DEFAULT["focus_FRAME_ALT_BACKGROUND"] = false
 
 GW_DEFAULT["multibarleft_pos"] = {}
 GW_DEFAULT["multibarleft_pos"]["point"] = "RIGHT"
