@@ -50,6 +50,7 @@ local function LoadTargetPanel(sWindow)
     addOption(p_target.scroll.scrollchild, BUFFS_ON_TOP, nil, "target_AURAS_ON_TOP", nil, nil, {["TARGET_ENABLED"] = true})
     addOption(p_target.scroll.scrollchild, L["Display Portrait Damage"], L["Display Portrait Damage on this frame"], "target_FLOATING_COMBAT_TEXT", nil, nil, {["TARGET_ENABLED"] = true})
     addOption(p_target.scroll.scrollchild, L["Invert target frame"], nil, "target_FRAME_INVERT", nil, nil, {["TARGET_ENABLED"] = true})
+    addOption(p_target.scroll.scrollchild, L["Show alternative background texture"], nil, "target_FRAME_ALT_BACKGROUND", nil, nil, {["TARGET_ENABLED"] = true})
 
     addOption(p_focus.scroll.scrollchild, MINIMAP_TRACKING_FOCUS, L["Display the focus target frame."], "focus_TARGET_ENABLED", nil, nil, {["FOCUS_ENABLED"] = true})
     addOption(p_focus.scroll.scrollchild, COMPACT_UNIT_FRAME_PROFILE_HEALTHTEXT, L["Show health as a numerical value."], "focus_HEALTH_VALUE_ENABLED", nil, nil, {["FOCUS_ENABLED"] = true})
@@ -60,6 +61,7 @@ local function LoadTargetPanel(sWindow)
     addOption(p_focus.scroll.scrollchild, SHOW_ALL_ENEMY_DEBUFFS_TEXT, L["Display all of the target's debuffs."], "focus_BUFFS_FILTER_ALL", nil, nil, {["FOCUS_ENABLED"] = true, ["focus_DEBUFFS"] = true})
     addOption(p_focus.scroll.scrollchild, SHOW_BUFFS, L["Display the target's buffs."], "focus_BUFFS", nil, nil, {["FOCUS_ENABLED"] = true})
     addOption(p_focus.scroll.scrollchild, L["Invert focus frame"], nil, "focus_FRAME_INVERT", nil, nil, {["FOCUS_ENABLED"] = true})
+    addOption(p_focus.scroll.scrollchild, L["Show alternative background texture"], nil, "focus_FRAME_ALT_BACKGROUND", nil, nil, {["TARGET_ENABLED"] = true})
 
     InitPanel(p_target, true)
     InitPanel(p_focus, true)
