@@ -1,4 +1,7 @@
 5.24.0
+NEW
+    - Added option for alternative target/focus background texture
+
 MISC
     - Tweak character talent frame
 
